# hermes-telex

./: .gitignore  README.md  __init__.py  adapter.py  env.example  plugin.yaml  pyproject.toml
deploy/: README.md  cleanup-telex-plugin.sh  deploy-telex-plugin.sh  env.example.local
docs/spec/: td_hermes-telex-plugin_zh.md  wbs_hermes-telex-plugin_zh.md
docs/test/: e2e_hermes-telex_runbook_zh.md  tp_hermes-telex-plugin_zh.md  tr_hermes-telex-plugin_e2e_zh.md
hermes_telex/: __init__.py  access.py  accounts.py  adapter.py  blocks.py  client.py  config.py  dispatcher.py  log.py  media.py  monitor.py  send.py  targets.py  tools.py  types.py
scripts/: local-test.sh  publish-release.sh
tests/: conftest.py
tests/unit/: test_access.py  test_blocks_targets_send.py  test_client_logic.py  test_config_accounts.py  test_dispatcher.py  test_registration.py
