[project]
name = "hermes-telex"
version = "1.0.0"
description = "Voyager Telex platform plugin for Hermes Agent"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "requires_hermes: test requires a live Hermes installation (BasePlatformAdapter and gateway)",
]
